Source/WebKit/Shared/API/Cocoa/_WKHitTestResult.mm
@@ -31,6 +31,7 @@
 #import "WebPageProxy.h"
 #import "_WKFrameHandleInternal.h"
 #import <WebCore/WebCoreObjCExtras.h>
+#import <wtf/URL.h>
 
 #if PLATFORM(MAC) || HAVE(UIKIT_WITH_MOUSE_SUPPORT)
 
@@ -48,7 +49,12 @@
 
 static NSURL *URLFromString(const WTF::String& urlString)
 {
-    return urlString.isEmpty() ? nil : [NSURL URLWithString:urlString.createNSString().get()];
+    // Avoid +[NSURL URLWithString:], which re-encodes the path when it contains characters
+    // that WebCore's URL parser leaves literal (e.g. '[' and ']'), double-encoding the
+    // existing %XX sequences. CFURLCreateAbsoluteURLWithBytes preserves them.
+    if (urlString.isEmpty())
+        return nil;
+    return WTF::URL { urlString }.createNSURL().autorelease();
 }
 
 - (NSURL *)absoluteImageURL
